- signIn and signOut

--- a/public/js/src/ng/partial/index/index.html
+++ b/public/js/src/ng/partial/index/index.html
@@ -1,41 +1,1 @@
-<div id="dropDownMenu" class="drop-down-menu" style="display: none;">
-    <div class="drop-down-item" ng-click="scrapPlace()">
-        Chercher des informations sur cet endroit
-    </div>
-</div>
-<div class="map-canvas pull-left">
-    <div id="map" class="full-size"></div>
-</div>
-<div class="pull-left" style="width: 60%; height: 100%; overflow-y: scroll">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h3>Pagination</h3>
-                <div>
-                    <button class="btn btn-sm btn-default" ng-click="pageChange(links.first.href)" ng-disabled="!links.first || page == 1">First</button>
-                    <button class="btn btn-sm btn-default" ng-click="pageChange(links.prev.href)" ng-disabled="!links.prev">Previous</button>
-                    <span class="bold">Page {{page}}</span>
-                    <button class="btn btn-sm btn-default" ng-click="pageChange(links.next.href)" ng-disabled="!links.next">Next</button>
-                    <button class="btn btn-sm btn-default" ng-click="pageChange(links.last.href)" ng-disabled="!links.last || page == pageCount">Last</button>
-                </div>
-                <table class="table table-hover table-condensed">
-                    <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Title</th>
-                        <th>Location</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="m in markersData track by $index" ng-mouseenter="onPlaceRowEnter($index)" ng-mouseleave="onPlaceRowLeave($index)">
-                            <td>{{rowIndex($index)}}</td>
-                            <td>{{m.title}}</td>
-                            <td>{{m.latitude}}, {{m.longitude}}</td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-
-</div>
+<h1>Accueil</h1>
