--- a/apps/www/views/index.phtml
+++ b/apps/www/views/index.phtml
@@ -16,6 +16,7 @@
 
         <script type="text/javascript" src="/js/src/ng/app.js"></script>
         <script type="text/javascript" src="/js/src/ng/controller/index.js"></script>
+        <script type="text/javascript" src="/js/src/ng/controller/place.js"></script>
         <script type="text/javascript" src="/js/src/ng/factory/marker.js"></script>
         <script type="text/javascript" src="/js/src/ng/resource/scrapped_place_marker/mapper.js"></script>
         <script type="text/javascript" src="/js/src/ng/resource/place_marker/mapper.js"></script>
@@ -38,6 +39,17 @@
                             <a href="/">Accueil</a>
                         </li>
                     </ul>
+                    <ul class="nav navbar-nav pull-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Baptiste <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/auth/sign-out">Se déconnecter</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </nav>
