--- a/app/module/frontend/view/index.phtml
+++ b/app/module/frontend/view/index.phtml
@@ -40,14 +40,18 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav pull-right">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                Baptiste <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="/auth/sign-out">Se déconnecter</a></li>
-                            </ul>
-                        </li>
+                        <?php if ($this->session->has('auth')) { ?>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <?= $this->session->get('auth')['email']; ?> <b class="caret"></b>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/auth/sign-out">Se déconnecter</a></li>
+                                </ul>
+                            </li>
+                        <?php } else { ?>
+                            <a href="/auth/sign-in">Se connecter</a>
+                        <?php }?>
                     </ul>
 
                 </div>
