--- a/app/module/frontend/view/index.phtml
+++ b/app/module/frontend/view/index.phtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr" ng-app="myTennisPal">
+<html lang="fr">
     <head>
         <meta charset="utf-8"/>
         <base href="/"/>
